# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("public") {
  # Meta-target, don't link into production code.
  testonly = true
  deps = [
    ":libmojo_sdk",
    ":sdk",
    "//third_party/mojo/public/cpp/application:standalone",
    "//third_party/mojo/public/cpp/bindings",
    "//third_party/mojo/public/cpp/environment:standalone",
    "//third_party/mojo/public/cpp/utility",
    "//third_party/mojo/public/interfaces/bindings/tests:test_interfaces",
    "//third_party/mojo/public/sky",
  ]

  if (is_linux) {
    deps += [
      "//third_party/mojo/public/python",
    ]
  }

  if (is_android) {
    deps += [
      "//third_party/mojo/public/java:system",
      "//third_party/mojo/public/java:bindings",
    ]
  }
}

group("sdk") {
  deps = [
    "//third_party/mojo/public/c/system",
    "//third_party/mojo/public/cpp/application:standalone",
    "//third_party/mojo/public/cpp/bindings",
    "//third_party/mojo/public/cpp/environment:standalone",
    "//third_party/mojo/public/cpp/utility",
    "//third_party/mojo/public/interfaces/application",
    "//third_party/mojo/public/js/bindings",
  ]
}

static_library("libmojo_sdk") {
  complete_static_lib = true
  deps = [ ":sdk" ]
}
