# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//build/config/mojo.gni")

action_foreach("sky") {
  script = "convert_amd_modules_to_sky.py"
  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
  sources = [
    rebase_path("mojo/public/js/buffer.js", ".", mojo_root),
    rebase_path("mojo/public/js/codec.js", ".", mojo_root),
    rebase_path("mojo/public/js/connection.js", ".", mojo_root),
    rebase_path("mojo/public/js/connector.js", ".", mojo_root),
    rebase_path("mojo/public/js/router.js", ".", mojo_root),
    rebase_path("mojo/public/js/unicode.js", ".", mojo_root),
    rebase_path("mojo/public/js/validator.js", ".", mojo_root),
  ]
  outputs = [
    "$target_gen_dir/{{source_name_part}}.sky",
  ]
  args = [
    "--input",
    "{{source}}",
    "--output",
    rebase_path(target_gen_dir, root_build_dir) + "/{{source_name_part}}.sky"
  ]
}
