# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//build/config/mojo.gni")

source_set("environment") {
  sources = [
    "async_waiter.h",
    "logger.h",
  ]

  deps = [ mojo_root + "mojo/public/c/system" ]
}
