# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("environment") {
  public_configs = [ "../../../build/config:mojo_sdk" ]
  sources = [
    "async_waiter.h",
    "logger.h",
  ]

  deps = [ "../system" ]
}
