# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("gles2_config") {
  defines = [ "GLES2_USE_MOJO" ]
}

source_set("gles2") {
  public_configs = [
    ":gles2_config",
    "../../../build/config:mojo_sdk"
  ]

  sources = [
    "gles2.h",
    "gles2_export.h",
  ]

  public_deps = [
    "../environment",
    "../system",
  ]
}
