# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# GYP version: mojo/public/mojo_public.gyp:mojo_application_base
source_set("application") {
  public_configs = [ "../../../build/config:mojo_sdk" ]

  sources = [
    "application_connection.h",
    "application_delegate.h",
    "application_impl.h",
    "connect.h",
    "service_provider_impl.h",
    "interface_factory.h",
    "interface_factory_impl.h",
    "lib/application_connection.cc",
    "lib/application_delegate.cc",
    "lib/application_impl.cc",
    "lib/service_provider_impl.cc",
    "lib/service_connector.cc",
    "lib/service_connector.h",
    "lib/service_registry.cc",
    "lib/service_registry.h",
    "lib/weak_service_provider.cc",
    "lib/weak_service_provider.h",
  ]

  deps = [
    "../bindings",
    "../environment",
    "../system",
    "../../interfaces/application",
  ]
}

# GYP version: mojo/public/mojo_public.gyp:mojo_application_standalone
source_set("standalone") {
  public_configs = [ "../../../build/config:mojo_sdk" ]

  sources = [
    "lib/application_runner.cc"
  ]

  public_deps = [ ":application" ]

  deps = [
    "../environment:standalone",
    "../utility",
  ]
}

source_set("test_support") {
  testonly = true
  public_configs = [ "../../../build/config:mojo_sdk" ]

  sources = [
    "application_test_base.h",
    "lib/application_test_base.cc",
  ]

  deps = [
    ":application",
    "../bindings",
    "../environment",
    "../system",
    "//testing/gtest",
  ]
}

source_set("test_support_standalone") {
  testonly = true
  public_configs = [ "../../../build/config:mojo_sdk" ]

  sources = [ "lib/application_test_main.cc" ]

  public_deps = [ ":test_support" ]
  deps = [
    ":application",
    "../environment:standalone",
    "../system",
    "../utility",
  ]
}
