# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//build/config/mojo.gni")

source_set("environment") {
  public_configs = [ rebase_path("mojo", ".", mojo_root) ]
  sources = [
    "logging.h",
    "environment.h",
  ]

  public_deps = [ mojo_root + "mojo/public/c/environment" ]

  deps = [ mojo_root + "mojo/public/cpp/system" ]
}

source_set("standalone") {
  public_configs = [ rebase_path("mojo", ".", mojo_root) ]
  sources = [
    "lib/default_async_waiter.cc",
    "lib/default_async_waiter.h",
    "lib/default_logger.cc",
    "lib/default_logger.h",
    "lib/environment.cc",
    "lib/logging.cc",
  ]

  public_deps = [ ":environment" ]

  deps = [
    mojo_root + "mojo/public/c/environment",
    mojo_root + "mojo/public/cpp/utility",
  ]
}
