# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("environment") {
  public_configs = [ "../../../build/config:mojo_sdk" ]

  sources = [
    "async_waiter.h",
    "logging.h",
    "environment.h",
  ]

  public_deps = [ "../../c/environment" ]

  deps = [
    "../bindings:callback",
    "../system",
  ]
}

source_set("standalone") {
  public_configs = [ "../../../build/config:mojo_sdk" ]

  sources = [
    "lib/async_waiter.cc",
    "lib/default_async_waiter.cc",
    "lib/default_async_waiter.h",
    "lib/default_logger.cc",
    "lib/default_logger.h",
    "lib/environment.cc",
    "lib/logging.cc",
  ]

  public_deps = [ ":environment" ]

  deps = [
    "../utility",
    "../../c/environment",
  ]
}
