# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/mojo.gni")

source_set("system") {
  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
  sources = [
    "buffer.h",
    "core.h",
    "data_pipe.h",
    "functions.h",
    "handle.h",
    "macros.h",
    "message_pipe.h"
  ]

  public_deps = [ rebase_path("mojo/public/c/system", ".", mojo_root) ]
}
