# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# GYP version: mojo/public/mojo_public.gyp:mojo_public_test_utils
source_set("test_utils") {
  testonly = true
  deps = [
    "../system",
    "../../c/test_support",
    "//base",
    "//testing/gtest",
  ]

  public_configs = [ "../../../build/config:mojo_sdk" ]

  sources = [
    "lib/test_support.cc",
    "lib/test_utils.cc",
    "test_utils.h",
  ]
}
