# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//build/config/mojo.gni")

source_set("utility") {
  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
  sources = [
    "mutex.h",
    "run_loop.h",
    "run_loop_handler.h",
    "thread.h",
    "lib/mutex.cc",
    "lib/run_loop.cc",
    "lib/thread.cc",
    "lib/thread_local.h",
    "lib/thread_local_posix.cc",
    "lib/thread_local_win.cc",
  ]

  deps = [
    rebase_path("mojo/public/cpp/bindings:callback", ".", mojo_root),
    rebase_path("mojo/public/cpp/system", ".", mojo_root),
  ]

  if (is_win) {
    # See crbug.com/342893:
    sources -= [
      "mutex.h",
      "thread.h",
      "lib/mutex.cc",
      "lib/thread.cc",
    ]
  }
}
