# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//build/config/mojo.gni")

import(rebase_path("mojo/public/tools/bindings/mojom.gni", ".", mojo_root))

# GYP version: mojo/public/mojo_public.gyp:mojo_application_bindings
mojom("application") {

  sources = [
    "application.mojom",
    "service_provider.mojom",
    "shell.mojom",
  ]
}
