# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//build/config/mojo.gni")

source_set("bindings") {
  public_configs = [ rebase_path("mojo", ".", mojo_root) ]
  sources = [
    "constants.cc",
    "constants.h",
  ]
}
