# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//build/config/mojo.gni")

source_set("tests") {
  testonly = true
  visibility = [ mojo_root + "mojo/public/cpp/system/tests:mojo_public_system_unittests" ]

  deps = [
    mojo_root + "mojo/public/c/environment",
    mojo_root + "mojo/public/c/system",
    mojo_root + "mojo/testing/gtest",
  ]

  sources = [
    "core_unittest.cc",
    "core_unittest_pure_c.c",
    "macros_unittest.cc",
  ]
}

# GYP version: mojo/mojo_base.gyp:mojo_public_system_perftests
test("perftests") {
  output_name = "mojo_public_system_perftests"

  sources = [
    "core_perftest.cc",
  ]

  deps = [
    "//base",
    mojo_root + "mojo/edk/test:run_all_perftests",
    mojo_root + "mojo/public/c/environment",
    mojo_root + "mojo/public/cpp/system",
    mojo_root + "mojo/public/cpp/test_support:test_utils",
    mojo_root + "mojo/public/cpp/utility",
    mojo_root + "mojo/testing/gtest",
  ]
}
