# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("tests") {
  testonly = true
  visibility = [ "../../../cpp/system/tests:mojo_public_system_unittests" ]

  deps = [
    "../../environment",
    "../../system",
    "//testing/gtest",
  ]

  public_configs = [ "../../../../build/config:mojo_sdk" ]
  sources = [
    "core_unittest.cc",
    "core_unittest_pure_c.c",
    "macros_unittest.cc",
  ]
}

# GYP version: mojo/mojo_base.gyp:mojo_public_system_perftests
test("perftests") {
  output_name = "mojo_public_system_perftests"

  public_configs = [ "../../../../build/config:mojo_sdk" ]
  sources = [
    "core_perftest.cc",
  ]

  deps = [
    "../../environment",
    "../../../cpp/system",
    "../../../cpp/test_support:test_utils",
    "../../../cpp/utility",
    "//base",
    "//mojo/edk/test:run_all_perftests",
    "//testing/gtest",
  ]
}
