# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# GYP version: mojo/mojo_base.gyp:mojo_public_application_unittests
test("mojo_public_application_unittests") {
  deps = [
    "//base",
    "//third_party/mojo/edk/test:run_all_unittests",
    "//third_party/mojo/public/cpp/application:standalone",
    "//third_party/mojo/public/cpp/environment:standalone",
    "//third_party/mojo/public/cpp/utility",
    "//testing/gtest",
  ]

  sources = [ "service_registry_unittest.cc" ]
}
