# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/mojo.gni")

# GYP version: mojo/mojo_base.gyp:mojo_public_bindings_unittests
test("mojo_public_bindings_unittests") {
  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
  sources = [
    "array_unittest.cc",
    "bounds_checker_unittest.cc",
    "buffer_unittest.cc",
    "connector_unittest.cc",
    "container_test_util.cc",
    "equals_unittest.cc",
    "handle_passing_unittest.cc",
    "interface_ptr_unittest.cc",
    "map_unittest.cc",
    "request_response_unittest.cc",
    "router_unittest.cc",
    "sample_service_unittest.cc",
    "serialization_warning_unittest.cc",
    "string_unittest.cc",
    "struct_unittest.cc",
    "type_conversion_unittest.cc",
    "validation_unittest.cc",
  ]

  deps = [
    "//mojo/edk/test:run_all_unittests",
    rebase_path("mojo/public/cpp/bindings", ".", mojo_root),
    rebase_path("mojo/public/cpp/environment:standalone", ".", mojo_root),
    rebase_path("mojo/public/cpp/system", ".", mojo_root),
    rebase_path("mojo/public/cpp/test_support:test_utils", ".", mojo_root),
    rebase_path("mojo/public/cpp/utility", ".", mojo_root),
    rebase_path("mojo/public/interfaces/bindings/tests:test_interfaces", ".", mojo_root),
    rebase_path("testing/gtest", ".", mojo_third_party_root),
    ":mojo_public_bindings_test_utils",
  ]
}

source_set("mojo_public_bindings_test_utils") {
  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
  sources = [
    "validation_test_input_parser.cc",
    "validation_test_input_parser.h",
  ]

  deps = [
    rebase_path("mojo/public/c/system", ".", mojo_root),
  ]
}
