# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# GYP version: mojo/mojo_base.gyp:mojo_public_bindings_unittests
test("mojo_public_bindings_unittests") {
  configs += [ "../../../../build/config:mojo_sdk" ]

  sources = [
    "array_unittest.cc",
    "bounds_checker_unittest.cc",
    "buffer_unittest.cc",
    "connector_unittest.cc",
    "container_test_util.cc",
    "equals_unittest.cc",
    "handle_passing_unittest.cc",
    "interface_ptr_unittest.cc",
    "map_unittest.cc",
    "request_response_unittest.cc",
    "router_unittest.cc",
    "sample_service_unittest.cc",
    "serialization_warning_unittest.cc",
    "string_unittest.cc",
    "struct_unittest.cc",
    "type_conversion_unittest.cc",
    "validation_unittest.cc",
  ]

  deps = [
    "../../bindings",
    "../../environment:standalone",
    "../../system",
    "../../test_support:test_utils",
    "../../utility",
    "../../../interfaces/bindings/tests:test_interfaces",
    "../../../../edk/test:run_all_unittests",
    "//testing/gtest",
    ":mojo_public_bindings_test_utils",
  ]
}

source_set("mojo_public_bindings_test_utils") {
  public_configs = [ "../../../../build/config:mojo_sdk" ]

  sources = [
    "validation_test_input_parser.cc",
    "validation_test_input_parser.h",
  ]

  deps = [
    "../../../c/system",
  ]
}
