# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# GYP version: mojo/mojo_base.gyp:mojo_public_environment_unittests
test("mojo_public_environment_unittests") {
  sources = [
    "async_waiter_unittest.cc",
    "logger_unittest.cc",
    "logging_unittest.cc",
  ]

  deps = [
    "//third_party/mojo/edk/test:run_all_unittests",
    "//third_party/mojo/public/c/environment",
    "//third_party/mojo/public/cpp/environment:standalone",
    "//third_party/mojo/public/cpp/system",
    "//third_party/mojo/public/cpp/test_support:test_utils",
    "//third_party/mojo/public/cpp/utility",
    "//third_party/mojo/testing/gtest",
  ]
}
