# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# GYP version: mojo/mojo_base.gyp:mojo_public_environment_unittests
test("mojo_public_environment_unittests") {
  configs += [ "../../../../build/config:mojo_sdk" ]

  sources = [
    "async_wait_unittest.cc",
    "async_waiter_unittest.cc",
    "logger_unittest.cc",
    "logging_unittest.cc",
  ]

  deps = [
    "../../bindings:callback",
    "../../environment:standalone",
    "../../system",
    "../../test_support:test_utils",
    "../../utility",
    "../../../c/environment",
    "../../../../edk/test:run_all_unittests",
    "//testing/gtest",
  ]
}
